tests/error/provide_array.gw
// [contains] must provide values/expressions for array
 [ ];
